[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
itertools = "0.12.0"
glam = "0.29.2"

# Parsing
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

# Errors
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.50"

# Benchmarking
divan = "0.1.11"
dhat = "0.3.2"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.dhat]
inherits = "release"
debug = 1
