[package]
name = "day-08"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true
glam.workspace = true
itertools.workspace = true
num-integer = "0.1.46"

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-08-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-08-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
