[package]
name = "day-11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true
cached = "0.54.0"

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-11-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-11-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
