[package]
name = "day-13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true
nom-supreme.workspace = true
nalgebra = "0.33.2"

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-13-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-13-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
