[package]
name = "day-20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.12.0"
glam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true

[dev-dependencies]
criterion.workspace = true
divan.workspace = true

[[bench]]
name = "day-20-bench"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "day-20-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
